添加注册页CSS样样式

--- a/sign_up.html
+++ b/sign_up.html
@@ -21,12 +21,28 @@
                 <h3>注册&nbsp;Flyme&nbsp;账号</h3>
                <form action="" method="POST" class="form">
                    <input type="text" class="txt" placeholder="手机号码"/>
-                    <select class="number_qz">
-                       <option>+86</option>
-                       <option>常用</option>
-                       <option>中国+86</option>
-                    </select>
-                   <span class="yz"></span>
+                    <span id="number_down">+86<i class="iconfont icon-xjt"></i>
+                        <ul class="number_list">
+                            <li>常用</li>
+                            <li><a href="#">中国<i>+86</i></a></li>
+                            <li><a href="#">中国台湾<i>+886</i></a></li>
+                            <li><a href="#">中国香港<i>+852</i></a></li>
+                            <li><a href="#">中国台湾<i>+886</i></a></li>
+                            <li><a href="#">中国香港<i>+852</i></a></li>
+                            <li><a href="#">中国台湾<i>+886</i></a></li>
+                            <li><a href="#">中国香港<i>+852</i></a></li>
+                            <li><a href="#">中国台湾<i>+886</i></a></li>
+                            <li><a href="#">中国香港<i>+852</i></a></li>
+                        </ul>
+                    </span>
+                   <span class="yz">
+                       <span class="yz_left">
+                           <i class="quan_blue"></i>
+                           <i class="quan_wc"></i>
+                       </span>
+                        <a href="#">点击按钮进行验证</a>
+                        <a href="https://www.geetest.com/first_page/" class="yz_right"></a>
+                   </span>
                    <p class="ts">点击立即注册，即表示您同意并愿意遵守<a href="#">Flyme服务协议</a>&nbsp;和<a href="#">&nbsp;法律声明</a></p>
                    <input type="submit" class="sub" value="立即注册"/>
                </form>
