添加注册页和首页轮播，注册页有判断问题，轮

--- a/sign_up.html
+++ b/sign_up.html
@@ -19,37 +19,55 @@
         <div class="banner">
             <div class="sign_up">
                 <h3>注册&nbsp;Flyme&nbsp;账号</h3>
-               <form action="" method="POST" class="form">
-                   <input type="text" class="txt" placeholder="手机号码"/>
+                <div class="error1"><span class="title"><img class="left" src="images/sign_up/error-ico.png"/>内容不能为空<img class="right" src="images/sign_up/close-ico.png"/></span></div>
+                <div class="error2"><span class="title"><img class="left" src="images/sign_up/error-ico.png"/>请输入合法的手机号码<img class="right" src="images/sign_up/close-ico.png"/></span></div>
+               <form action="php/sign_upCheck.php" class="form">
+                   <input type="text" class="txt" placeholder="手机号码" name="tel"/>
                     <span id="number_down">+86<i class="iconfont icon-xjt"></i>
-                        <ul class="number_list">
-                            <li>常用</li>
-                            <li><a href="#">中国<i>+86</i></a></li>
-                            <li><a href="#">中国台湾<i>+886</i></a></li>
-                            <li><a href="#">中国香港<i>+852</i></a></li>
-                            <li><a href="#">中国台湾<i>+886</i></a></li>
-                            <li><a href="#">中国香港<i>+852</i></a></li>
-                            <li><a href="#">中国台湾<i>+886</i></a></li>
-                            <li><a href="#">中国香港<i>+852</i></a></li>
-                            <li><a href="#">中国台湾<i>+886</i></a></li>
-                            <li><a href="#">中国香港<i>+852</i></a></li>
-                        </ul>
+                        <div class="box">
+                            <ul class="number_list">
+                                <li>常用</li>
+                                <li><a href="#">中国<i>+86</i></a></li>
+                                <li><a href="#">中国台湾<i>+886</i></a></li>
+                                <li><a href="#">中国香港<i>+852</i></a></li>
+                                <li><a href="#">中国台湾<i>+886</i></a></li>
+                                <li><a href="#">中国香港<i>+852</i></a></li>
+                                <li><a href="#">中国台湾<i>+886</i></a></li>
+                                <li><a href="#">中国香港<i>+852</i></a></li>
+                                <li><a href="#">中国台湾<i>+886</i></a></li>
+                                <li><a href="#">中国香港<i>+852</i></a></li>
+                            </ul>
+                      </div>
                     </span>
                    <span class="yz">
                        <span class="yz_left">
                            <i class="quan_blue"></i>
                            <i class="quan_wc"></i>
                        </span>
-                        <a href="#">点击按钮进行验证</a>
+                        <p>点击按钮进行验证</p>
                         <a href="https://www.geetest.com/first_page/" class="yz_right"></a>
+                        <span class="yz2">
+                            <span class="yz_left2">
+                                <i class="gou"></i>
+                            </span>
+                             <a href="#">验证成功</a>
+                             <a href="https://www.geetest.com/first_page/" class="yz_right2"></a>
+                        </span>
                    </span>
-                   <p class="ts">点击立即注册，即表示您同意并愿意遵守<a href="#">Flyme服务协议</a>&nbsp;和<a href="#">&nbsp;法律声明</a></p>
-                   <input type="submit" class="sub" value="立即注册"/>
+                  
+                   <p class="ts">点击立即注册，即表示您同意并愿意遵守<a href="https://i.flyme.cn/serviceAgreement">Flyme服务协议</a>&nbsp;和<a href="https://www.meizu.com/legal.html">&nbsp;法律声明</a></p>
+                   <input type="submit" class="sub" value="立即注册" name="submit"/>
                </form>
                <a href="sign_in.html" class="dl">登录</a>
             </div>
-
       </div>
     </div>
 </body>
+<script src='js/common.js'></script>
+<script src="js/move1.1.0.js"></script>
+<script src='js/checkInput_up.js'></script>
+<script src="js/ajax0.1.0.js"></script>
+<script>
+    checkInput_up.init();
+</script>
 </html>
