--- a/index.html
+++ b/index.html
@@ -40,11 +40,28 @@
 		</div>
 		<div id="banner_wrapper">
 			<div class="banners">
-				<ul>
-					<li><a href="#"><img src="images/bg01.jpg"/></a></li>
+				<ul class="lunbo">
+					<li class="active"><a href="#"><img src="images/bg01.jpg"/></a></li>
+					<li><a href="#"><img src="images/bg02.jpg"/></a></li>
+					<li><a href="#"><img src="images/bg03.jpg"/></a></li>
+					<li><a href="#"><img src="images/bg04.jpg"/></a></li>
+					<li><a href="#"><img src="images/bg08.jpg"/></a></li>
+					<li><a href="#"><img src="images/bg12.jpg"/></a></li>
+				</ul>
+				<ul class="banner_btn">
+					<li class="btns"></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
 				</ul>
 			</div>
 		</div>
-		<script src="js/checkInput.js"></script>
+		<script src='https://code.jquery.com/jquery-3.1.1.min.js'></script>
+		<script src="js/index.js"></script>
+		<script>
+			
+		</script>
 	</body>
 </html>
