--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 		<div id="banner_wrapper">
 			<div class="banners">
 				<ul class="lunbo">
-					<li class="active"><a href="#"><img src="images/bg01.jpg"/></a></li>
-					<li><a href="#"><img src="images/bg02.jpg"/></a></li>
-					<li><a href="#"><img src="images/bg03.jpg"/></a></li>
-					<li><a href="#"><img src="images/bg04.jpg"/></a></li>
-					<li><a href="#"><img src="images/bg08.jpg"/></a></li>
-					<li><a href="#"><img src="images/bg12.jpg"/></a></li>
+					<li class="active"><a href="#"><img style="z-index: 7;" src="images/bg01.jpg"/></a></li>
+					<li><a href="#"><img style="z-index: 6;" src="images/bg02.jpg"/></a></li>
+					<li><a href="#"><img style="z-index: 5;" src="images/bg03.jpg"/></a></li>
+					<li><a href="#"><img style="z-index: 4;" src="images/bg04.jpg"/></a></li>
+					<li><a href="#"><img style="z-index: 3;" src="images/bg08.jpg"/></a></li>
+					<li><a href="#"><img style="z-index: 2;" src="images/bg12.jpg"/></a></li> 
 				</ul>
 				<ul class="banner_btn">
 					<li class="btns"></li>
