--- a/app/sign_in.html
+++ b/app/sign_in.html
@@ -20,14 +20,15 @@
             <div class="sign_up">
 				<strong class="erm"><a href="sign_in2.html"><img src="static/images/sigb_in/erm.png"/></a></strong>
                 <h3>验证码登录</h3>
-                <div class="error1"><span class="title"><img class="left" src="static/images/sign_up/error-ico.png"/>该手机号码尚未注册，<a href="sign_up.html">立即注册</a><img class="right" src="static/images/sign_up/close-ico.png"/></span></div>
-                <div class="error2"><span class="title"><img class="left" src="static/images/sign_up/error-ico.png"/>请点击按钮进行验证<img class="right" src="static/images/sign_up/close-ico.png"/></span></div>
-                <div class="error3"><span class="title"><img class="left" src="static/images/sign_up/error-ico.png"/>请输入正确的验证码<img class="right" src="static/images/sign_up/close-ico.png"/></span></div>
-                <form action="../server/php/sign_upCheck.php" class="form">
+                <div class="error1"><span class="title"><img class="left" src="static/images/sign_up/error-ico.png"/>该手机号码尚未注册<a href="sign_up.html">立即注册</a><img class="right" src="static/images/sign_up/close-ico.png"/></span></div>
+                <div class="error2"><span class="title"><img class="left" src="static/images/sign_up/error-ico.png"/>请填写完整的登录信息<img class="right" src="static/images/sign_up/close-ico.png"/></span></div>
+                <div class="error3"><span class="title">号码正确的请获取验证码登录<img class="right" src="static/images/sign_up/close-ico.png"/></span></div>
+                <form action="" class="form" onsubmit="return false">
                    <input type="text" class="txt" placeholder="手机号码" name="tel"/>
-                    <input type="text" class="yzm" placeholder="验证码" maxlength="6" minlength="6"/>
-                    <i class="yzm_shu"></i>
-                    <a href="#" class="yzm_word">获取验证码</a>
+                   <div class="yzmbox">
+                    <input type="text" class="yzm" placeholder="验证码" maxlength="6" minlength="6"><i class="yzm_shu"></i>
+                    <a class="yzm_word">获取验证码</a></div>
+                    
                     <span class="yzm_num"><i class="num">60</i>秒后重新获取</span>
                     <span id="number_down">+86<i class="iconfont icon-xjt"></i>
                         <div class="box">
@@ -61,7 +62,7 @@
                         </span>
                    </span>
                 
-                   <input type="submit" class="sub_in" value="登录" name="submit"/>
+                   <button type="button" class="sub_in" name="submit">登录</button>
                </form>
                <a href="sign_up.html" class="dl">注册</a>
                <a href="https://i.flyme.cn/forgetpwd" class="forget">忘记密码？</a>
@@ -71,9 +72,9 @@
 </body>
 <script src='static/js/common.js'></script>
 <script src="static/js/move1.1.0.js"></script>
-<script src='static/js/checkIput_in.js'></script>
 <script src="static/js/ajax2.0.js"></script>
+<script src='static/js/checkIput_in.js'></script>
 <script>
-    checkInput_up.init();
+    checkInput_in.init();
 </script>
 </html>
