购物车页面完成

--- a/app/shop_car.html
+++ b/app/shop_car.html
@@ -34,18 +34,86 @@
                     <a class="header-right-link" href="#">注册</a>
                 </li>
                 <li class="member signin">
-                    <a class="member-link" target="_blank" href="#"><span class="member-username" id="topbarUser"></span>的商城<i class="member-triangle"></i></a>
+                    <a class="member-link" target="_blank" href="#"><span class="member-username" id="topbarUser"></span>username的商城<i class="member-triangle"></i></a>
                     <ul class="member-downmenu">
                         <li><a href="#">地址管理</a></li>
                         <li><a href="#">我的收藏</a></li>
                         <li><a href="#">我的收购金</a></li>
                         <li><a href="#">问题反馈</a></li>
-                        <li><a href="#">退出</a></li>
+                        <li><a href="#" style="text-align:center;border-top:1px solid #ccc;">退出</a></li>
                     </ul>
-                </li>
-    
+                </li>   
             </ul>
+        </div>
+    </div>
+    <div id="main-wrapper">
+        <div class="main content">
+            <div class="main-content">
+                <div class="empty-car">
+                    <div class="carimg">
+                        <img src="static/images/car.png" alt="">
+                    </div>
+                    <div class="carword">
+                        <p>购物车内还没有商品，赶紧去选购吧~</p>
+                        <a href="http://localhost:8888/MEIZU/app/" class="tip-btn">返回商城首页</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer-wrapper">
+        <div class="footer content">
+            <div class="footer-top">
+                <div class="footertop-left">
+                    <a href="https://service.meizu.com/help/delivery.html"><i><img src="static/images/footer/footer6.png" alt=""></i>全场顺丰包邮</a>
+                    <a href="https://service.meizu.com/help/delivery.html"><i><img src="static/images/footer/footer3.png" alt=""></i>100+ 城市次日送达</a>
+                    <a href="https://service.meizu.com/help/delivery.html"><i><img src="static/images/footer/footer5.png" alt=""></i>7天无理由退货</a>
+                    <a href="https://service.meizu.com/help/delivery.html"><i><img src="static/images/footer/footer4.png" alt=""></i>15天换货保障</a>
+                    <a href="https://service.meizu.com/help/delivery.html"><i><img src="static/images/footer/footer2.png" alt=""></i>1年免费保修</a>
+                    <a href="https://service.meizu.com/help/delivery.html"><i><img src="static/images/footer/footer1.png" alt=""></i>上门快修</a>
+                </div>
+                <div class="footertop-right">
+                    <p>周一至周日 7:30-24:00</p>
+                    <p>400-788-3333</p>
+                    <a>在线客服</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <ul>
+                    <li><a>了解魅族</a></li>
+                    <li><a>加入我们</a></li>
+                    <li><a>联系我们</a></li>
+                    <li><a>Flyme</a></li>
+                    <li><a>魅族社区</a></li>
+                    <li><a>天猫旗舰店</a></li>
+                    <li><a>问题反馈</a></li>
+                    <li><a>线上销售授权名单公示</a></li>
+                    <li><a>出版物经营许可证</a></li>
+                    <li><a>简体中文</a></li>
+                </ul>
+                <p>
+                    ©2018 Meizu Telecom Equipment Co., Ltd. All rights reserved. 
+                    <a href="">粤ICP备13003602号-2</a> 
+                    <a href="">合字B2-20170010</a> 
+                    <a href="">营业执照</a> 
+                    <a href="">法律声明</a> 
+                    <i><img src="static/images/footer/ficon1.png" alt=""></i>
+                    粤公网安备 44049102496009 号
+                    <span><a href=""><img src="static/images/footer/ficon2.png" alt=""></a></span>
+                    <span><a href=""><img src="static/images/footer/ficon3.png" alt=""></a></span>
+                    <span><a href=""><img src="static/images/footer/ficon4.png" alt=""></a></span> 
+                    <div class="ficon">
+                        <a href=""><img src="static/images/footer/ficon5.png" alt=""></a>
+                        <a href="">
+                            <img src="static/images/footer/ficon6.png" alt="">
+                            <div><img src="static/images/footer/fwinxin.jpg" alt=""></div>
+                        </a>
+                        <a href=""><img src="static/images/footer/ficon7.png" alt=""></a>
+                    </div>
+                </p>
+            </div>
         </div>
     </div>
 </body>
 </html>
+          
