--- a/app/sign_in.html
+++ b/app/sign_in.html
@@ -7,7 +7,8 @@
     <title>Flyme账号-登录</title>
     <link rel="stylesheet" type="text/css" href="static/css/reset.css"/>
     <link rel="stylesheet" type="text/css" href="static/css/iconfont.css"/>
-    <link rel="stylesheet" type="text/css" href="static/css/sign_in.css">
+    <link rel="stylesheet" type="text/css" href="static/css/sign_in.css"/>
+    <link rel="stylesheet" type="text/css" href="static/css/common.css">
 </head>
 <body>
     <div id="header_wrapper">
@@ -68,6 +69,38 @@
                <a href="https://i.flyme.cn/forgetpwd" class="forget">忘记密码？</a>
             </div>
       </div>
+    </div>
+    <div id="footer-wrapper">
+        <div class="footer content">
+            <ul>
+                <li><a href="">关于魅族</a></li>
+                <li><a href="">工作机会</a></li>
+                <li><a href="">联系我们</a></li>
+                <li><a href="">法律声明</a></li>
+                <li><a href="">常见问题</a></li>
+                <li><a href="">简体中文</a></li>                            
+            </ul>
+            <div class="footer_c">
+                <span>客服热线</span>
+                <span>400-788-3333</span>
+                <a href="">在线客服</a>
+            </div>
+            <div class="footer_r">
+                <i><a href=""><img src="" alt=""></a></i>
+                <i><a href=""><img src="" alt=""></a></i>
+                <i><a href=""><img src="" alt=""></a></i>
+            </div>
+        </div>
+        <div class="footer_bottom content">
+            <p>
+                ©2018 Meizu Telecom Equipment Co., Ltd. All rights reserved. 
+                <a href="">备案号: 粤ICP备13003602号-4</a> 
+                <a href="">经营许可证编号: 粤B2-20130198</a> 
+                <a href="">营业执照</a> 
+                <i><img src="static/images/footer/ficon1.png" alt=""></i>
+                <a href="">粤公网安备 44049102496009 号</a>
+            </p>
+        </div>
     </div>
 </body>
 <script src='static/js/common.js'></script>
