首页基本完成，还差页足未全部完善以及一些小效果

--- a/app/index.html
+++ b/app/index.html
@@ -309,9 +309,66 @@
 				</ul>
 			</div>
 		</div>
-		<div class="footer">
-			<div footer_content>
-				
+		<div id="footer_wrapper">
+			<div class="footer content">
+				<div class="footer_nav1">
+					<ul class="footer_ul">
+						<li><a href="#"><img src="static/images/pic69.png"/>全场顺丰包邮</a></li>
+						<li><a href="#"><img src="static/images/pic70.png"/>100+ 城市次日送达</a></li>
+						<li><a href="#"><img src="static/images/pic71.png"/>7天无理由退货</a></li>
+						<li><a href="#"><img src="static/images/pic72.png"/>15天换货保障</a></li>
+						<li><a href="#"><img src="static/images/pic73.png"/>1年免费保修</a></li>
+						<li><a href="#"><img src="static/images/pic74.png"/>上门快修</a></li>
+					</ul>
+					<div class="footer_right">
+						<p>周一至周日&nbsp;7:30-24:00</p>
+						<span>400-788-3333</span><br/>
+						<a href="#">在线客服</a>
+					</div>
+				</div>
+				<div class="footer_info">
+					<ul class="footer_info_ul">
+						<li><a href="#">了解魅族</a><i></i></li>
+						<li><a href="#">加入我们</a><i></i></li>
+						<li><a href="#">联系我们</a><i></i></li>
+						<li><a href="#">Flyme</a><i></i></li>
+						<li><a href="#">魅族社区</a><i></i></li>
+						<li><a href="#">天猫旗舰店</a><i></i></li>
+						<li><a href="#">问题反馈</a><i></i></li>
+						<li><a href="#">线上销售授权名单公示</a><i></i></li>
+						<li><a href="#">出版物经营许可证</a><i></i></li>
+						<li><a href="#"><img src="static/images/img02.png"/>简体中文</a></li>
+					</ul>
+					<div class="subscribe">
+						<span>©2018 Meizu Telecom Equipment Co., Ltd. All rights reserved.&nbsp;&nbsp;&nbsp;
+							<a href="#">粤ICP备13003602号</a>
+							<a href="#">合字B2-20170010</a>
+							<a href="#">营业执照</a>
+							<a href="#">法律声明</a>
+							<i><img src="static/images/gahz.png"/>粤公网安备 44049102496009 号</i>
+							<a href="#">
+								<img src="static/images/pic79.png"/>
+								<img src="static/images/pic80.png"/>
+							</a>
+							<a href="#">
+								<img src="static/images/pic75.png"/>
+								<img src="static/images/pic77.png"/>
+							</a>
+							<a href="#">
+								<img src="static/images/pic76.png"/>
+								<img src="static/images/pic78.png"/>
+							</a>
+						</span>
+						<div class="subscribe_right">
+							<a href="#" class="weibo1"></a>
+							<a href="#" class="weibo2"></a>
+							<a href="#" class="wechat1"></a>
+							<a href="#" class="wechat2"></a>
+							<a href="#" class="QQkj1"></a>
+							<a href="#" class="QQkj2"></a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		</div>
