上传购物车页面

--- a/app/sign_in.html
+++ b/app/sign_in.html
@@ -86,9 +86,9 @@
                 <a href="">在线客服</a>
             </div>
             <div class="footer_r">
-                <i><a href=""><img src="" alt=""></a></i>
-                <i><a href=""><img src="" alt=""></a></i>
-                <i><a href=""><img src="" alt=""></a></i>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
             </div>
         </div>
         <div class="footer_bottom content">
@@ -97,8 +97,8 @@
                 <a href="">备案号: 粤ICP备13003602号-4</a> 
                 <a href="">经营许可证编号: 粤B2-20130198</a> 
                 <a href="">营业执照</a> 
-                <i><img src="static/images/footer/ficon1.png" alt=""></i>
-                <a href="">粤公网安备 44049102496009 号</a>
+                <i><img src="static/images/footer/ghs.png" alt=""></i>
+                <a href="">粤公网安备44049102496009号</a>
             </p>
         </div>
     </div>
