已完善index页足，还差小效果待完善

--- a/app/index.html
+++ b/app/index.html
@@ -337,7 +337,16 @@
 						<li><a href="#">问题反馈</a><i></i></li>
 						<li><a href="#">线上销售授权名单公示</a><i></i></li>
 						<li><a href="#">出版物经营许可证</a><i></i></li>
-						<li><a href="#"><img src="static/images/img02.png"/>简体中文</a></li>
+						<li class="language"><a href="#"><img src="static/images/img02.png"/>简体中文</a>
+							<ul class="language_ul">
+								<li><a href="#"><img src="static/images/img02.png"/>简体中文</a></li>
+								<li><a href="#"><img src="static/images/img01.png"/>简体中文</a></li>
+								<li><a href="#"><img src="static/images/img03.png"/>简体中文</a></li>
+								<li><a href="#"><img src="static/images/img04.png"/>简体中文</a></li>
+								<li><a href="#"><img src="static/images/img05.png"/>简体中文</a></li>
+								<li><a href="#"><img src="static/images/img04.png"/>简体中文</a></li>
+							</ul>
+						</li>
 					</ul>
 					<div class="subscribe">
 						<span>©2018 Meizu Telecom Equipment Co., Ltd. All rights reserved.&nbsp;&nbsp;&nbsp;
@@ -346,26 +355,33 @@
 							<a href="#">营业执照</a>
 							<a href="#">法律声明</a>
 							<i><img src="static/images/gahz.png"/>粤公网安备 44049102496009 号</i>
-							<a href="#">
-								<img src="static/images/pic79.png"/>
-								<img src="static/images/pic80.png"/>
+							<a href="#" class="dp_logo">
+								<img src="static/images/sign_up/ficon2.png" class="dp_logo1"/>
+								<img src="static/images/sign_up/ficon02.png" class="dp_logo2"/>
 							</a>
-							<a href="#">
-								<img src="static/images/pic75.png"/>
-								<img src="static/images/pic77.png"/>
+							<a href="#" class="bz_logo">
+								<img src="static/images/sign_up/ficon3.png" class="bz_logo1"/>
+								<img src="static/images/sign_up/ficon03.png" class="bz_logo2"/>
 							</a>
-							<a href="#">
-								<img src="static/images/pic76.png"/>
-								<img src="static/images/pic78.png"/>
+							<a href="#" class="xin_logo">
+								<img src="static/images/sign_up/ficon4.png" class="xin_logo1"/>
+								<img src="static/images/sign_up/ficon04.png" class="xin_logo2"/>
 							</a>
 						</span>
 						<div class="subscribe_right">
-							<a href="#" class="weibo1"></a>
-							<a href="#" class="weibo2"></a>
-							<a href="#" class="wechat1"></a>
-							<a href="#" class="wechat2"></a>
-							<a href="#" class="QQkj1"></a>
-							<a href="#" class="QQkj2"></a>
+							<span class="subscribe_right1">
+								<a href="#" class="weibo1"><img src="static/images/sign_up/ficon5.png"/></a>
+								<a href="#" class="weibo2"><img src="static/images/sign_up/ficon05.png"/></a>
+							</span>
+							<span class="subscribe_right2">
+								<a href="#" class="wechat1"><img src="static/images/sign_up/ficon6.png"/></a>
+								<a href="#" class="wechat2"><img src="static/images/sign_up/ficon06.png"/></a>
+								<a href="#" class="wechat3"><img src="static/images/sign_up/wx-code_94c130c.jpg"/></a>
+							</span>
+							<span class="subscribe_right3">
+								<a href="#" class="QQkj1"><img src="static/images/sign_up/ficon7.png"/></a>
+								<a href="#" class="QQkj2"><img src="static/images/sign_up/ficon07.png"/></a>
+							</span>
 						</div>
 					</div>
 				</div>
